kubernetes/bases/httproute-api-server.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smart-task-api-server
spec:
  parentRefs:
    - name: smart-task
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: smart-task-api-server
          port: 8080
